<resources>
    <string name="app_name">Profile Creation</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="registration_fragment_label">Sign Up</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="registration_title">Profile Creation</string>
    <string name="profile_name">Hello, %s</string>
    <string name="registration_subtitle">Use the form below to submit your portfolio.\nAn email and password are required.</string>
    <string name="profile_info">your super-awesome portfolio has been successfully submitted! The preview below is what the community will see</string>
    <string name="avatar_btn_text">Tap to add avatar</string>
    <string name="first_name">First Name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="website">Website</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>