<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/content_padding"
        tools:context=".presentation.registration.RegistrationFragment">

        <TextView
            android:id="@+id/registration_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration_title"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/registration_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:text="@string/registration_subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registration_title" />

        <FrameLayout
            android:id="@+id/avatar_content"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:background="@drawable/pick_image"
            app:layout_constraintTop_toBottomOf="@id/registration_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp">
            <TextView
                android:id="@+id/pick_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/avatar_btn_text" />
            <com.dev.profilecreation.presentation.custom_view.RoundedImageView
                android:id="@+id/user_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:cornerRadius="8dp" />
        </FrameLayout>

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray"
            android:background="@drawable/edit_text_bg"
            app:layout_constraintTop_toBottomOf="@id/avatar_content"
            android:layout_marginTop="8dp"
            android:inputType="text"
            android:hint="@string/first_name"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray"
            android:background="@drawable/edit_text_bg"
            app:layout_constraintTop_toBottomOf="@id/first_name"
            android:layout_marginTop="8dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray"
            android:background="@drawable/edit_text_bg"
            app:layout_constraintTop_toBottomOf="@id/email"
            android:layout_marginTop="8dp"
            android:inputType="textPassword"
            android:hint="@string/password"/>

        <EditText
            android:id="@+id/web_site"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray"
            android:background="@drawable/edit_text_bg"
            app:layout_constraintTop_toBottomOf="@id/password"
            android:layout_marginTop="8dp"
            android:inputType="text"
            android:hint="@string/website"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/submit_btn"
            android:text="Submit"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/white"
            app:backgroundTint="@null"
            app:layout_constraintTop_toBottomOf="@id/web_site"
            app:layout_constraintStart_toStartOf="@id/web_site"
            app:layout_constraintEnd_toEndOf="@id/web_site"/>

        <Button
            android:id="@+id/button_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>